<resources>
    <string name="app_name">Nupança</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="main_fragment_label">First Fragment</string>
    <string name="transfers_fragment_label">Transfers Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--Globals-->
    <string name="confirm_uppercase_text">CONFIRMAR</string>
    <string name="total_amount">0,00</string>
    <string name="initial_value_to_save">0,00</string>
    <string name="money_sign">R$</string>


    <!--Strings used in the the main fragment-->
    <string name="total_amount_label">Dinheiro guardado</string>
    <string name="goals_label">Metas</string>
    <string name="control_label">Planejamento de gastos</string>
    <string name="progress_bar_label">Felicidade do porquinho</string>

    <!--Strings used in the the transfers fragment-->
    <string name="transfers_title">Dinheiro guardado</string>
    <string name="store_money_title">Guardar dinheiro</string>
    <string name="store_money_text">Economize seu dinheiro e deixe o \nporquinho dividir ele entre
        suas \nmetas</string>
    <string name="recover_money_title">Resgatar dinheiro</string>
    <string name="recover_money_text">Devolva um valor para o seu saldo e \ndeixe que o porquinho
        redistribua o \nvalor retirado entre suas metas</string>

    <!--Strings used in the the save money fragment-->
    <string name="insert_money_text">Quanto você quer guardar?</string>
    <string name="available_money_placeholder">Saldo disponível: R$ 0,00</string>

    <!--Strings used in the the goals list fragment-->
    <string name="goals_list_title">Metas</string>
    <string name="goal_title">Casa Própria</string>
    <string name="goal_text">você já acumulou R$ 3.000, e deve\ncompletar sua meta no dia
        01/01/2030</string>
    <string name="low_priority_text">Baixa</string>
    <string name="medium_priority_text">Média</string>
    <string name="high_priority_text">Alta</string>
    <string name="add_item_button_text">ADICIONAR META</string>

    <!--Strings used in the goal fragment-->
    <string name="deposited_money">Dinheiro depositado</string>
    <string name="money_left">Dinheiro restante</string>
    <string name="objective_start_date">Início do objetivo</string>
    <string name="objective_desired_end_date">Término desejado</string>
    <string name="objective_priority">Prioridade da meta</string>
    <string name="goal_success_placeholder_text">Parabéns, você está a caminho de conseguir seus
     objetivos! </string>
    <string name="how_to_improve">COMO MELHORAR?</string>
    <string name="objective_name_placeholder">META</string>

    <!--Strings used in the goal edit fragment-->
    <string name="confirm_goal_edit">CONFIRMAR EDIÇÃO</string>
    <string name="change_goal">ALTERAR META</string>
    <string name="add_goal_edit">ADICIONAR META</string>
    <string name="modify_goal">MODIFICAR META</string>
    <string name="invalid_entries">ENTRADAS INVÁLIDAS</string>
    <string name="how_much_do_you_want_to_save">Quanto você quer juntar?</string>
    <string name="when_do_you_want_to_withdraw">Até quando você deseja juntar?</string>
    <string name="whats_the_priority">Qual a prioridade da sua meta?</string>
    <string name="placeholder_edit_text">NOME DA SUA META</string>

    <!--Strings used in the the control fragment-->
    <string name="control_title">Planeje seus gastos</string>
    <string name="suggestions_button_text">Exibir Sugestões</string>
    <string name="suggestions_button_text_2">Ocultar Sugestões</string>
    <string name="plan_label">Plano</string>
    <string name="spendings_label">Gastos nos\núltimos 30 dias</string>
    <string name="savings_label">Guardado nos\núltimos 30 dias</string>
    <string name="suggestion_label">Sugestão:</string>
    <string name="add_plan_label">Adicione uma meta de gastos!</string>
    <string name="brl">R$</string>
    <string name="food_title">Alimentação</string>
    <string name="food_spendings">0</string>
    <string name="food_plan">0</string>
    <string name="food_suggestion">0</string>
    <string name="transport_title">Transporte</string>
    <string name="transport_spendings">0</string>
    <string name="transport_plan">0</string>
    <string name="transport_suggestion">0</string>
    <string name="shopping_title">Compras</string>
    <string name="shopping_spendings">0</string>
    <string name="shopping_plan">0</string>
    <string name="shopping_suggestion">0</string>
    <string name="housing_title">Moradia</string>
    <string name="housing_spendings">0</string>
    <string name="housing_plan">0</string>
    <string name="housing_suggestion">0</string>
    <string name="others_title">Diversos</string>
    <string name="others_spendings">0</string>
    <string name="others_plan">0</string>
    <string name="others_suggestion">0</string>
    <string name="savings_title">Economias</string>
    <string name="savings_spendings">0</string>
    <string name="savings_plan">0</string>
    <string name="savings_suggestion">0</string>

    <!--Strings used in the the start control fragment-->
    <string name="start_control_text">"Adicione metas para os seus gastos em cada categoria. Então tente seguir seus planos!\n\nVocê pode usar nossas sugestões personalizadas para te ajudar no seu planejamento."</string>
    <string name="start">COMEÇAR</string>

    <!--Strings used in the the start goals fragment-->
    <string name="start_goal">Você ainda não possui nenhuma meta criada. Clique no botão abaixo para adicionar a sua primeira!</string>

    <!--Strings used in the info fragments-->
    <string name="main_info">Esta é a tela principal da Nupança! Você pode gerenciar seu dinheiro economizado, acessar suas metas ou acessar seus planejamentos de gastos.\n\nA felicidade do porquinho indica a sua saúde financeira, ou seja, ela indica se você está seguindo as suas metas e os seus gastos planejados.\n\nVeja mais dicas de como melhorar suas finanças no <a href="https://blog.nubank.com.br/tag/educacao-financeira/">blog da Nubank.</a></string>
    <string name="transfers_info">É muito fácil transferir dinheiro da Nuconta para a Nupança!\n\nBasta clicar em \"Guardar dinheiro\" para pôr dinheiro na Nupança, ou \"Resgatar dinheiro\" para recuperar na Nuconta.</string>
    <string name="control_info">Adicione metas para os seus gastos em cada categoria e, então, tente seguir seus planos!\n\nClicando em \"Exibir Sugestões\", você pode usar nossas sugestões personalizadas para te ajudar no seu planejamento. Estas sugestões são baseadas no seu perfil de gastos, comparado com pessoas de sua região.\n\nVeja mais dicas de como economizar no <a href="https://blog.nubank.com.br/tag/educacao-financeira/">blog da Nubank.</a></string>
    <string name="goalsList_info">Crie metas para atingir os seus sonhos de consumo! Em seguida, acompanhe-as e garanta que elas serão cumpridas à tempo.\n\nVeja mais dicas de como gerenciar metas no <a href="https://blog.nubank.com.br/tag/educacao-financeira/">blog da Nubank.</a></string>

    <!--Default account values-->
    <string name="default_account_balance">3000.00</string>
    <string name="default_account_age">29</string>
    <string name="default_account_food_30_days">870</string>
    <string name="default_account_housing_30_days">1100</string>
    <string name="default_account_income">4100.00</string>
    <string name="default_account_marriage">3</string>
    <string name="default_account_others_30_days">110</string>
    <string name="default_account_region">1</string>
    <string name="default_account_sex">1</string>
    <string name="default_account_transport_30_days">110</string>
</resources>
