<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_horizontal_margin"
        android:layout_marginTop="@dimen/main_toolbar_top_margin"
        android:hapticFeedbackEnabled="false"
        android:src="@drawable/ic_go_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/main_horizontal_margin"
        android:layout_marginTop="@dimen/main_vertical_margin"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/how_much_to_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/keep_calm_w01_book"
            android:text="@string/insert_money_text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/save_withdraw_money_font_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_spacing_insert_money_fragment"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/space_to_numbers_insert_money_fragment"
                android:fontFamily="@font/keep_calm_w01_book"
                android:text="@string/money_sign"
                android:textColor="@android:color/black"
                android:textSize="@dimen/total_amount_main_font_size" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:textSize="@dimen/save_withdraw_money_font_size">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:digits="0123456789,"
                    android:fontFamily="@font/keep_calm_w01_book"
                    android:inputType="numberDecimal"
                    android:text="@string/initial_value_to_save"
                    android:textSize="@dimen/total_amount_main_font_size" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/text_spacing_insert_money_fragment"
            android:layout_weight="1"
            android:fontFamily="@font/keep_calm_w01_book"
            android:text="@string/available_money_placeholder"
            android:textSize="@dimen/current_amount_insert_money_fragment_font_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_return"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/line1"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLightGray"
            app:layout_constraintBottom_toTopOf="@+id/options_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/confirm_insert_money_fragment_margin"
            android:fontFamily="@font/keep_calm_medium"
            android:gravity="center_horizontal"
            android:text="@string/confirm_uppercase_text"
            android:textSize="@dimen/confirm_insert_money_fragment_font_size" />

        <TextView
            android:id="@+id/line2"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLightGray"
            app:layout_constraintBottom_toTopOf="@+id/options_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
