<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_fragment_goals_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".GoalsListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_toolbar_height"
            android:layout_marginStart="@dimen/main_toolbar_horizontal_margin"
            android:layout_marginTop="@dimen/main_toolbar_top_margin"
            android:layout_marginEnd="@dimen/main_toolbar_horizontal_margin"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/button_return"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:background="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_close"
                android:tint="@android:color/white" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/keep_calm_medium"
                android:gravity="center"
                android:text="@string/goals_list_title"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/transfers_title_font_size" />

            <ImageButton
                android:id="@+id/button_info"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:background="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_information"
                android:tint="@android:color/white" />

        </LinearLayout>

        <TextView
            android:id="@+id/total_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/keep_calm_w01_book"
            android:gravity="center"
            android:text="@string/total_amount"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/total_amount_main_font_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/goals_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button_add_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_top" />

    <LinearLayout
        android:id="@+id/button_add_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/line1"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLightGray"
            app:layout_constraintBottom_toTopOf="@+id/options_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/add_item_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/confirm_insert_money_fragment_margin"
            android:fontFamily="@font/keep_calm_medium"
            android:gravity="center_horizontal"
            android:text="@string/add_item_button_text"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/confirm_insert_money_fragment_font_size" />

        <TextView
            android:id="@+id/line2"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLightGray"
            app:layout_constraintBottom_toTopOf="@+id/options_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>