<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_fragment_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="@dimen/main_toolbar_height"
        android:layout_marginStart="@dimen/main_toolbar_horizontal_margin"
        android:layout_marginTop="@dimen/main_toolbar_top_margin"
        android:layout_marginEnd="@dimen/main_toolbar_horizontal_margin"
        android:orientation="horizontal"
        android:scaleX="1"
        android:scaleY="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/button_return"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:background="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_arrowleftpig"
            android:stateListAnimator="@anim/alpha_reduction" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/button_info"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:background="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_information" />

    </LinearLayout>

    <ImageView
        android:id="@+id/image_pig"
        android:layout_width="@dimen/pig_size"
        android:layout_height="@dimen/pig_size"
        android:layout_marginStart="@dimen/main_horizontal_margin"
        android:layout_marginEnd="@dimen/main_horizontal_margin"
        android:src="@drawable/ic_bigpig"
        app:layout_constraintBottom_toTopOf="@+id/pig_happiness_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/pig_happiness_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/keep_calm_w01_book"
        android:text="@string/progress_bar_label"
        android:textAlignment="center"
        android:textColor="@color/colorGray"
        android:textSize="@dimen/progress_bar_label_font_size"
        app:layout_constraintBottom_toTopOf="@id/pig_happiness"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_pig" />

    <SeekBar
        android:id="@+id/pig_happiness"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="@dimen/progress_bar_width"
        android:layout_height="@dimen/progress_bar_height"
        android:progress="50"
        android:progressBackgroundTint="@color/colorGray"
        android:progressTint="@color/colorPrimary"
        android:thumb="@drawable/ic_bar"
        android:thumbTint="@color/colorGray"
        app:layout_constraintBottom_toTopOf="@id/spacer2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pig_happiness_label" />

    <Space
        android:id="@+id/spacer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/total_amount_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pig_happiness" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/total_amount_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@+id/options_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pig_happiness">

        <TextView
            android:id="@+id/total_amount_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/main_horizontal_margin"
            android:fontFamily="@font/keep_calm_w01_book"
            android:text="@string/total_amount_label"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/total_amount_label_font_size"
            app:layout_constraintBottom_toTopOf="@+id/total_amount"
            app:layout_constraintEnd_toStartOf="@id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/total_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/main_horizontal_margin"
            android:fontFamily="@font/keep_calm_w01_book"
            android:text="@string/total_amount"
            android:textColor="@android:color/black"
            android:textSize="@dimen/total_amount_font_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/total_amount_label" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/total_amount_arrow_size"
            android:layout_height="@dimen/total_amount_arrow_size"
            android:layout_marginEnd="@dimen/main_horizontal_margin"
            android:src="@drawable/ic_arrowright"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/total_amount_label"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/line1"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/colorLightGray"
        app:layout_constraintBottom_toTopOf="@+id/options_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/options_layout"
        android:layout_width="0dp"
        android:layout_height="@dimen/options_height"
        android:clipToPadding="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/line2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/goals_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/goals_icon"
                android:layout_width="@dimen/options_icon_size"
                android:layout_height="@dimen/options_icon_size"
                android:layout_margin="@dimen/options_margin"
                android:src="@drawable/ic_metas"
                android:tint="@color/colorPrimary" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/goals_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/options_margin"
                android:fontFamily="@font/keep_calm_w01_book"
                android:text="@string/goals_label"
                android:textColor="@android:color/black"
                android:textSize="@dimen/options_font_size" />
        </LinearLayout>

        <TextView
            android:id="@+id/line3"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorLightGray" />

        <LinearLayout
            android:id="@+id/control_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/control_icon"
                android:layout_width="@dimen/options_icon_size"
                android:layout_height="@dimen/options_icon_size"
                android:layout_margin="@dimen/options_margin"
                android:src="@drawable/ic_controle"
                android:tint="@color/colorPrimary" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/control_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/options_margin"
                android:fontFamily="@font/keep_calm_w01_book"
                android:text="@string/control_label"
                android:textColor="@android:color/black"
                android:textSize="@dimen/options_font_size" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/line2"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:background="@color/colorLightGray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@+id/options_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_amount_layout" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/total_amount_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_pig" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/image_pig"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>